# ikill

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: publish.yml
src/: cli.rs  ikill.rs  main.rs
